--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,6 +13,7 @@
     "noEmit": true,
 
     /* Linting */
+    "noImplicitAny": false,
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
