--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antv/g2": "^5.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.168.0"
